
- When closing jEdit, open buffers are not added to the "Recent Files"
  list if the "Restore previously open files on startup" option is on.

- View.goToBuffer() will try to find a non-zero height text area if
  possible.

- Pressing TAB now preserves the tall caret, if there is one.

- When a directory is reloaded, it is no longer moved to the top of the
  file system browser's history list.

}}}
{{{ Bug Fixes

- "Backup directory" feature now works if the file being edited is on a
  different filesystem than the backup directory (Marcelo Vanzin).

- Don't use two-stage save if the file's parent directory is not
  writeable (Marcelo Vanzin).

- Minor fix for handling of the recent buffer when the current buffer
  was closed.

- Fix StringIndexOutOfBoundsException when opening files with a
  malformed XML PI.

- Removing open files from the favorites list didn't work.

- calling readNextChar() no longer clears the status bar after the
  script returns.

- Fix potential ArrayIndexOutOfBoundsException when indenting lines
  containing unmatched brackets.

- The "deselecting this plugin will deselect dependencies" message did
  not give the actual list of dependencies.

- Fixed NullPointerException when selecting QuickNotepad menu items
  before opening QuickNotepad first.

- Register persistence was broken and didn't work in many cases.

}}}
{{{ API Changes

- Removed EditPlugin.JAR, deprecated since 4.2.

- New org.gjt.sp.jedit.gui.HistoryTextArea class can be used by
  plugins.

}}}

}}}

{{{ Version 4.2final

Thanks to Brant Gurganus, Justin Dieters, Ollie Rutherfurd and Thomas
Bock for contributing to this release.

{{{ Syntax Highlighting

- Added Factor syntax highlighting.

- Updated BBj syntax highlighting (Thomas Bock).

- Added ANTLR syntax highlighting (Brant Gurganus).

- Added D syntax highlighting (Jim Lawton).

- Added INNO setup syntax highlighting (Ollie Rutherfurd).

- Added Doxygen syntax highlighting. This includes doxyfile*